refactor(TerminateTool): enhance message field generation and expectedReturnInfo handling
- Updated the message field generation to support JSON array format when expectedReturnInfo is provided, improving the structure and clarity of termination messages.
- Refactored the constructor to directly assign expectedReturnInfo, simplifying the logic for handling null or empty values.